; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/time/extr_snapmgr.c_RegisterSnapshot.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/time/extr_snapmgr.c_RegisterSnapshot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@InvalidSnapshot = common dso_local global i64 0, align 8
@CurrentResourceOwner = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @RegisterSnapshot(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load i64, i64* @InvalidSnapshot, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i64, i64* @InvalidSnapshot, align 8
  store i64 %8, i64* %2, align 8
  br label %13

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = load i32, i32* @CurrentResourceOwner, align 4
  %12 = call i64 @RegisterSnapshotOnOwner(i64 %10, i32 %11)
  store i64 %12, i64* %2, align 8
  br label %13

13:                                               ; preds = %9, %7
  %14 = load i64, i64* %2, align 8
  ret i64 %14
}

declare dso_local i64 @RegisterSnapshotOnOwner(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
